applications/switchbot-meter-exporter/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deployment
  labels:
    app: default

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - args:
            - --port
            - "8888"
          image: ghcr.io/rokoucha/switchbot-meter-exporter:latest
          name: switchbot-meter-exporter
          ports:
            - containerPort: 8888
