applications/switchbot-meter-exporter/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service
  labels:
    app: default

spec:
  selector:
    app: default
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: telemetry
      port: 8888
      targetPort: 8888
